# tdk

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
docker/: Makefile.am
docker/core/: Dockerfile  Makefile.am
docker/grpc/: Dockerfile  Makefile.am  grpc.conf  grpc.sh
docker/tdk/: Dockerfile  Makefile.am
scripts/: .gitignore
scripts/ci/: before_install  build
